--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
 }
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
   height: 100vh;
@@ -18,6 +20,17 @@ body {
 }
 .opacity-100 {
   opacity: unset;
+}
+.dock {
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 8px;
+  position: absolute;
+  right: 10px;
+}
+.dock:hover {
+  opacity: 80%;
 }
 /**
  * ----------------------------------------
@@ -52,82 +65,3 @@ body {
     opacity: 1;
   }
 }
-
-/**
- * ----------------------------------------
- * animation heartbeat
- * ----------------------------------------
- */
-.heartbeat {
-	-webkit-animation: heartbeat 3s ease-in-out infinite both;
-	        animation: heartbeat 3s ease-in-out infinite both;
-}
-@-webkit-keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
-@keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
-
