--- a/public/global.css
+++ b/public/global.css
@@ -33,12 +33,11 @@ body {
 }
 
 .dock {
+  display: inline-block;
   cursor: pointer;
   background-color: #fff;
   border-radius: 50%;
   padding: 8px;
-  position: absolute;
-  right: 10px;
 }
 
 .dock:hover {
@@ -51,8 +50,9 @@ input {
   border: none;
   outline: none;
   color: rgba(255, 255, 255, 0.829);
-  padding: 0 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.829);
+  padding: 10px 30px;
+  border: 1px solid rgba(255, 255, 255, 0.829);
+  border-radius: 30px;
 }
 
 
